Style overflow fixed

--- a/app/css/roadmap.css
+++ b/app/css/roadmap.css
@@ -151,6 +151,8 @@
   min-height: 1px;
   float: left;
   box-sizing: border-box;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .listTitle {
